bynkc/tests/fixtures/negative/320_opaque_no_kernel_inherit/input.bynk
commons demo {
  -- #561: opaque types deliberately do NOT widen to their base, so they do
  -- not inherit the base kernel — the call stays `method_not_found`.
  type Code = opaque String

  fn shout(c: Code) -> String {
    c.toUpper()
  }
}
